--- a/appsettings.json
+++ b/appsettings.json
@@ -5,12 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=app.db"
-  },
   //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EmployeeDeptDB;Trusted_Connection=True;TrustServerCertificate=True"
+  //  "DefaultConnection": "Data Source=app.db"
   //},
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EmployeeDeptDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "JwtSettings": {
     "SecretKey": "ThisIsAStrongSecretKeyForJwt123456!",
     "Issuer": "YourApp",
